refactor tests to BDD